updated with comments

--- a/covid19_symtomps.ipynb
+++ b/covid19_symtomps.ipynb
@@ -1520,6 +1520,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "dabe695c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "97ae26a5",
    "metadata": {},
@@ -1541,13 +1551,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "dabe695c",
+   "cell_type": "markdown",
+   "id": "ca9a06e1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split"
+    "# logistic regression model"
    ]
   },
   {
@@ -1753,6 +1761,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e25162d1",
+   "metadata": {},
+   "source": [
+    "# ensembling randomforest model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "72191b91",
@@ -1783,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "da411f60",
+   "id": "0c1c1387",
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1818,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ae348e8e",
+   "id": "fe649be1",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c70903",
+   "id": "eec17cfb",
    "metadata": {},
    "outputs": [],
    "source": []
